--- a/_dev/apache2/000-default.conf
+++ b/_dev/apache2/000-default.conf
@@ -4,7 +4,7 @@
 
 	<Directory /vagrant/>
 		Options Indexes FollowSymLinks MultiViews
-		AllowOverride None
+		AllowOverride All
 		Require all granted
 		allow from all
 	</Directory>
