--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "vs/framework",
   "description": "The base framework for the VS site.",
   "license": "proprietary",
+  "type": "project",
   "require": {
     "nezamy/route": "1.0.*",
     "smarty/smarty": "3.1.*"
